--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "vercel-dev": "vercel dev",
+    "vercel-build": "echo \"No build step (static + serverless functions)\" && exit 0",
+    "deploy": "vercel --prod"
   },
   "dependencies": {
     "express": "^4.18.2",
